# s2i-example-thoth-security

./: .thoth.yaml  Pipfile  README.rst  openshift.yaml  pyproject.toml
logs/: s2i-latest-logs.txt  s2i-security-logs.txt
