[tool.poetry]
name = "s2i-example-micropipenv"
version = "0.1.0"
description = ""
authors = ["Fridolin Pokorny <fridolin@redhat.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
